--- a/webspeechdemo.html
+++ b/webspeechdemo.html
@@ -81,6 +81,8 @@
   }
 </style>
 <head">Fiona Au CSC 212 HW 5</head>
+<!-- <gcse:search gname="searcher">here is where i'm testing</gcse:search> -->
+<!-- <div class="gcse-search"></div> -->
 <h1 class="center" id="headline">
   <a href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">
     Web Speech API</a> Demonstration</h1>
@@ -88,6 +90,7 @@
 <button id="task_1" onclick="task_1(event)">Task #1</button>
 <button id="task_2" onclick="task_2(event)">Task #2</button>
 <button id="task_3" onclick="task_3(event)">Task #3</button>
+
 <div id="info">
   <p id="info_start">Click on the microphone icon and begin speaking.</p>
   <p id="info_speak_now">Speak now.</p>
@@ -143,6 +146,7 @@
 </div>
 
 <script>
+// <script async src="https://cse.google.com/cse.js?cx=f4750a06ead354b0b">
 var langs =
 [['Afrikaans',       ['af-ZA']],
  ['Bahasa Indonesia',['id-ID']],
@@ -242,11 +246,13 @@ var endTime;
 var speedInstruction = '';
 
 // task #2
+var task2 = 0;
 var phoneAgent_transcript = '';
 var response = '';
 var listenForResponse = 0;
+var bookmarkNext = 0;
 var phoneAgent_greeting = new SpeechSynthesisUtterance('Hello, thank you for contacting Verizon. Please state the purpose of your call today. You may say Account Information, Technical Support, or Product Information.');
-var phoneAgent_accountInformation = new SpeechSynthesisUtterance('You have selected Account Information. You may check you balance by saying Check Balance or pay your balance by saying Pay Balance. Please make your selection now');
+var phoneAgent_accountInformation = new SpeechSynthesisUtterance('You have selected Account Information. You may check your balance by saying Check Balance or pay your balance by saying Pay Balance. Please make your selection now');
 var phoneAgent_accountInformation_checkBalance = new SpeechSynthesisUtterance('Your balance is $329.82. To pay your balance, say Pay Balance.');
 var phoneAgent_accountInformation_payBalance = new SpeechSynthesisUtterance('You will pay your balance of $329.82. To continue, with this process, say Payment Process');
 var phoneAgent_accountInformation_paymentProcess = new SpeechSynthesisUtterance('Thank you. We will begin the payment process.');
@@ -260,10 +266,19 @@ var phoneAgent_technicalSupport_turnOffOnSuggestion_no = new SpeechSynthesisUtte
 var phoneAgent_technicalSupport_turnOffOnSuggestion_didItWork = new SpeechSynthesisUtterance('Did it work?');
 var phoneAgent_technicalSupport_turnOffOnSuggestion_didItWork_yes = new SpeechSynthesisUtterance('I am glad I could help. Have a nice day.');
 var phoneAgent_technicalSupport_turnOffOnSuggestion_didItWork_no = new SpeechSynthesisUtterance('We will connect you the the next available agent.');
-var phoneAgent_productInformation = new SpeechSynthesisUtterance('We have several available products. We have iPhone, Samsung phone, and LG phone. Select the product you want to purchase.');
+var phoneAgent_productInformation = new SpeechSynthesisUtterance('We have several available products. We have iPhone, Samsung, and LG. Select the product you want to purchase.');
 var phoneAgent_productInformation_exists = new SpeechSynthesisUtterance('You have chosen one of our products.');
 var phoneAgent_productInformation_doesNotExist = new SpeechSynthesisUtterance('You have not chosen one of our products. Please choose from iPhone, Samsung phone, and LG phone. State the product you want to purchase.');
 var phoneAgent_unableToHelp = new SpeechSynthesisUtterance('It seems like I am unable to help you. I will connect you the the next available agent. Please wait.');
+
+// task 3
+var search;
+var task3 = 0;
+
+// window.onload = function() {
+//   search = google.search.cse.element.getElement('searcher');
+//   console.log(search);
+// };
 
 if (!('webkitSpeechRecognition' in window) || !('speechSynthesis' in window)) { // if browser does not support speech recognition, display message to let user know
   upgrade();
@@ -339,6 +354,9 @@ if (!('webkitSpeechRecognition' in window) || !('speechSynthesis' in window)) { 
     var interim_transcript = '';
     var cannotUnderstandCount = 0;
     var temp_response = '';
+    if (cannotUnderstandCount >= 3) {
+      synthesis.speak(phoneAgent_unableToHelp);
+    }
     for (var i = event.resultIndex; i < event.results.length; ++i) {
       if (event.results[i].isFinal) { // if black text
         final_transcript += event.results[i][0].transcript; // final_transcript is a global variable
@@ -356,12 +374,67 @@ if (!('webkitSpeechRecognition' in window) || !('speechSynthesis' in window)) { 
     if (final_transcript || interim_transcript) {
       if (listenForResponse == 0) {
         listenForResponse = 1;
-        temp_final_transcript = '';
+        temp_response = '';
       } else {
-        response = temo_reponse;
+        response = temp_response;
         listenForResponse = 0;
       }
       showButtons('inline-block');
+    }
+    console.log('response: ' + response);
+    if (task2 == 1) { // this chunk of if statements only gets executed if we're on task 2
+      if (bookmarkNext == 0) {
+        if (response.includes('account information')) {
+          synthesis.speak(phoneAgent_accountInformation);
+          bookmarkNext = 11;
+        } else if (response.includes('technical support')) {
+          synthesis.speak(phoneAgent_technicalSupport);
+          phoneAgent_technicalSupport.onend = (event) => {
+            bookmarkNext = 21;
+          }
+        } else if (response.includes('product information') || response.includes('products information')) {
+          synthesis.speak(phoneAgent_productInformation);
+          phoneAgent_productInformation.onend = (event) => {
+            bookmarkNext = 31;
+        }
+        } else {
+          cannotUnderstandCount = cannotUnderstandCount + 1;
+        }
+      } else if (bookmarkNext == 11) {
+        if (response.includes('check balance')) {
+          synthesis.speak(phoneAgent_accountInformation_checkBalance);
+          bookmarkNext = 112;
+        } else if (response.includes('pay balance')) {
+          synthesis.speak(phoneAgent_accountInformation_payBalance);
+          synthesis.speak(phoneAgent_accountInformation_paymentProcess_creditCard);
+          bookmarkNext = 12;
+        } else {
+          cannotUnderstandCount = cannotUnderstandCount + 1;
+        }
+      } else if (bookmarkNext == 12) {
+        synthesis.speak(phoneAgent_accountInformation_paymentProcess_expirationDate);
+        bookmarkNext = 13;
+      } else if (bookmarkNext == 13) {
+        synthesis.speak(phoneAgent_accountInformation_paymentProcess_securityCode);
+      } else if (bookmarkNext == 21) { //
+        synthesis.speak(phoneAgent_technicalSupport_turnOffOnSuggestion);
+      } else if (bookmarkNext == 31) { // check if person has selected iPhone, Samsungphone, or LG phone
+        console.log('31 response: ' + response);
+        if (response.includes('iPhone')) {
+          synthesis.speak(phoneAgent_productInformation_exists);
+        } else if (response.includes('Samsung')) {
+          synthesis.speak(phoneAgent_productInformation_exists);
+        } else if (response.includes('LG')) {
+          synthesis.speak(phoneAgent_productInformation_exists);
+        } else {
+          synthesis.speak(phoneAgent_productInformation_doesNotExist);
+        }
+      }
+    }
+    if (task3 == 1) {
+      if (response.includes('ok google')) {
+
+      }
     }
   };
 }
@@ -436,6 +509,8 @@ function startButton(event) { // user presses start button; essentially used as 
 }
 
 function task_1(event) {
+  task2 = 0;
+  task3 = 0;
   if (recognizing) {
     recognition.stop();
   }
@@ -454,9 +529,12 @@ function task_1(event) {
 }
 
 function task_2(event) {
+  task2 = 1;
+  task3 = 0;
   if (recognizing) {
     recognition.stop();
   }
+  listenForResponse = 0;
   speedInstructionText.style.visibility = 'hidden';
   final_transcript = '';
   recognition.lang = select_dialect.value;
@@ -469,8 +547,14 @@ function task_2(event) {
   console.log('task 2');
   recognition.start();
   synthesis.speak(phoneAgent_greeting);
-  phoneAgent_greeting.onend = (event) => {
-    console.log('task 2');
+}
+
+function task_3(event) {
+  task2 = 0;
+  task3 = 1;
+  recognition.start();
+  recognition.onend = (event) => {
+    recognition.start();
   }
 }
 
